--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,15 +1,8 @@
 name: Deploy DotNet project to Azure Function App
 
 on:
-  [push]
+  [push, workflow_dispatch]
 
-# CONFIGURATION
-# For help, go to https://github.com/Azure/Actions
-#
-# 1. Set up the following secrets in your repository:
-#   AZURE_FUNCTIONAPP_PUBLISH_PROFILE
-#
-# 2. Change these variables for your configuration:
 env:
   AZURE_FUNCTIONAPP_NAME: 'CFL-Rijnkaai-Test'   # set this to your function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './Rijnkaai'       # set this to the path to your function app project, defaults to the repository root
