--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,5 +38,6 @@ jobs:
       uses: Azure/functions-action@v1
       id: fa
       with:
+        package: ./output
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
 
